@@ -92,6 +92,7 @@ public interface ResourceFacade {
      */
     String expand(String inputString, String debugLocation);
     String expand(String inputString, String debugLocation, Map additionalContext);
+    String expand(String inputString, String debugLocation, Map additionalContext, boolean localize);
 
     void xslFoTransform(StreamSource xslFoSrc, StreamSource xsltSrc, OutputStream out, String contentType);
 }
