@@ -38,6 +38,8 @@ Bug Fixes:
   dependents (like Enumeration, Uom, etc) caused an out of memory error;
   GitHub issue #149
 - Fixed XML Actions FTL error for entity-find.@having-econditions
+- Fixed issue where ResourceFacadeImpl.setInContext localized values when
+  expanding; caused problems with set elements in widget-template-include
 
 ===========================================================================
 Release 1.5.3 - 11 Sep 2015
